[package]
name = "quotes"
version = "0.1.0"
authors = ["Ivan Pedrazas <ipedrazas@gmail.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
hyper = { version = "0.9", default-features = false, features = ["security-framework"] }
rustc-serialize = "0.3.19"